# melgym

./: (old) main.py  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  MEGDIA  MEGOUT  MELRST  Makefile  README.md  cfg.json  cfg.yaml  config.yaml  drl.py  drl_controller.py  foo.py  main.py  pyproject.toml  rand_controller.py  requirements.txt  run_drl.py  run_experiment.py  run_melgym.py  setup.py
.github/: PR_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_TEMPLATE.md  FEATURE_TEMPLATE.md  QUESTION_TEMPLATE.md  config.yml
.github/workflows/: python-publish.yml
aux/: stats.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/code/: drl.py  drl_controller.py  rand_controller.py  sample-config.yml
docs/source/_static/css/: custom.css
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/pages/: about.rst  api.rst  examples.rst
examples/: drl.py  drl_controller.py  plots.ipynb  plots.py  plots2.ipynb  rand_controller.py  rbc_controller.py  stats.py
melgym/: __init__.py
melgym/data/: (deprecated)-branch.inp  (deprecated)-hvac.inp  base.inp  branch-nl.inp  branch.inp  branch_0.inp  branch_0_v2.inp  branch_1.inp  branch_2.inp  branch_3.inp  hvac.inp  presscontrol.inp  pressure.inp  sample.inp  sample.inp_NEW  sgs.inp  sgs2.inp  simple.inp
melgym/envs/: __init__.py  _hvac.py  _pressure.py  hvac.py  hvac_env.py  melcor.py  melcor_env.py  pressure.py  sample_env.py  sgs_env.py
melgym/exec/: Makefile  SAMPLE.OUT  SAMPLE.PTF  SAMPLE.RST  SAMPLE_COR.DIA  SAMPLE_COR.MES  SAMPLE_GEN.DIA  SAMPLE_GEN.OUT  extDIAG
melgym/utils/: __init__.py  aux.py  callbacks.py  constants.py  edf.py  exceptions.py  rewards.py  wrappers.py
tensorboard/PPO_1/: events.out.tfevents.1686143857.asus.39739.0
(+22 files in other folders)
