[tool.poetry]
name = "melgym"
version = "2.0.0"
description = "A Gymnasium-based interface for continuous control with MELCOR."
authors = ["Antonio Manjavacas <manjavacas@ugr.es>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
