[tool.poetry]
name = "melgym"
version = "2.0.0"
description = "A Gymnasium-based interface for continuous control with MELCOR."
authors = ["Antonio Manjavacas <manjavacas@ugr.es>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^1.1.1"
melkit = "^0.4"
colorama = "^0.4.6"
stable-baselines3 = {extras = ["extra"], version = "^2.6.0", optional = true}
matplotlib = "^3.10.1"


[tool.poetry.extras]
rl = ["stable-baselines3", "sb3-contrib"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-autobuild = ">=2021.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
